20130323 1.67 Home and End work in sub ask; bug fixes in sub ask_password
20120905 1.66 ask_filename strips trailing space after filename-completion
20120327 1.65 also ask_filename introduced
20120310 view uses antiword, wv or catdoc on .doc files
20101118 1.63 CLUI_MOUSE=OFF ask() pronounces the char being backspaced
20101110 1.62 CLUI_MOUSE=OFF disables mouse-handling; bug fixed in ask_for_clue
20101109 1.62 speech uses espeak if eflite isn't there, ctrl-X quits choose()
20101108 1.62 speech silences speakup if it's running
20101021 1.61 bug fixed in ask() with a default
20101017 1.60 Spoken interface; see CLUI_SPEAK, emacspeak, eflite
20100516 1.56 ^C calls endwin and raises SIGINT
20100515 1.55 narrow_the_clue only leaves mouse-mode if we're in mouse-mode
20100504 1.54 help_text() introduced; Delete works in ask; various bugs fixed
20100502 1.53 TermClui.py does stty sane on return; bug fixed in audio_stuff
20100501 1.52 disable debugging :-)
20100430 1.51 bug fixed: &ask accepts spaces
20100426 1.50 &choose supports mouse !! and utf8 clues supported
20091104 1.44 ask() handles left-arrow at start of string
20091003 1.43 choose and inform use :encoding(utf8) when in a utf8 environment
20090928 1.42 fixed bug in &choose with items longer than screen-width
20090307 1.41 icol,irow managed by puts; Install removed; Py3 translation
20070511 1.40 removed spurious debug command: &puts("returned")
20070309 1.39 no change
20061005 1.37 uses Term::ReadKey if available, rather than `stty`
20070309 1.38 choose with a long list asking for a clue offers ^X to quit
20050928 1.35 FileSelect.pm returns correct var-type if q for quit
20060816 1.36 neater pod SYNOPSIS formatting, audio_stuff uses mpg123 for mp3
20050915 1.34 FileSelect.pm -Directory option; bugfix when -Chdir=-SelDir=0
20050914 1.33 FileSelect.pm fix sort bug in line 90
20050911 1.32 FileSelect.pm fix "sort interpreted as function" warning